--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=5454
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:${MYSQLPORT:3306}/${MYSQL_DATABASE:projectmanagements}
 spring.datasource.username=root
-spring.datasource.password=MYSQLPASSWORD 
+spring.datasource.password=hari0412
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.mail.host: smtp.gmail.com
